# Project

./: pyproject.toml  setup.cfg
src/myproject/: calculator.py  main.py
